# tui

./: Cargo.toml  README.md
examples/: case_changer.rs  container.rs  stack.rs  text_input.rs  todo_list.rs  todos_widget2.rs
examples/logger/: mod.rs
src/: app.rs  buffer.rs  buffer2.rs  callback.rs  component.rs  draw_buffer.rs  event.rs  lib.rs  style.rs  term.rs  vec2.rs  widget.rs  widget2.rs
src/platform/: ansi.rs  ansi_event.rs  event.rs  mod.rs  writer.rs
src/platform/ansi/: ansi_builder.rs  mod.rs
src/platform/linux/: mod.rs  raw_term.rs
src/sys/: linux.rs  mod.rs
src/sys/ansi/: input.rs  mod.rs  parse_event.rs
src/term2/: ansi.rs  ansi_event.rs  mod.rs
src/term2/linux/: mod.rs  raw_term.rs
src/views/: container.rs  label.rs  stack.rs  string_editor.rs  text_field.rs
src/widget2/: app.rs  widget.rs
src/widgets/: container.rs  hooked.rs  label.rs  mod.rs  stack.rs  string_editor.rs  text_field.rs  text_input.rs  vstack.rs
src/widgets2/: container.rs  label.rs  mod.rs  stack.rs  string_editor.rs  text_field.rs
tests/: container.rs  hooked.rs  stack.rs  text_input.rs  vstack.rs
